infrastructure/base/cert-manager/cert-manager.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: platform-cert-manager
  namespace: cert-manager-system
specs:
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.namespace.labels.networking.tinyrack.net/isolation: enabled
        k8s:io.kubernetes.pod.namespace: cert-manager-system
    ingress:
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "10250"
                protocol: TCP
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: monitoring-system
              app.kubernetes.io/name: alloy
        toPorts:
          - ports:
              - port: "9402"
                protocol: TCP
    egress:
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
